Work done at the academy on the 12/03/2024, from 14:00-00:00h.